--- a/Client/public/css/CandidateGrid.css
+++ b/Client/public/css/CandidateGrid.css
@@ -1,4 +1,3 @@
 .grid-autofill {
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
 }
-
